tests/fail/weak_memory/weak_uninit.stderr
error: Undefined Behavior: using uninitialized data, but this operation requires initialized memory
  --> tests/fail/weak_memory/weak_uninit.rs:LL:CC
   |
LL |     let j2 = spawn(move || x.load(Ordering::Relaxed));
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE on thread `unnamed-ID`:
   = note: inside closure at tests/fail/weak_memory/weak_uninit.rs:LL:CC
   = note: thread `unnamed-ID` was spawned by thread `main`
   = note: inside `std::sys::pal::PLATFORM::thread::Thread::new` at RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked_::<'_, {closure@tests/fail/weak_memory/weak_uninit.rs:LL:CC}, usize>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked::<{closure@tests/fail/weak_memory/weak_uninit.rs:LL:CC}, usize>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn::<{closure@tests/fail/weak_memory/weak_uninit.rs:LL:CC}, usize>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::spawn::<{closure@tests/fail/weak_memory/weak_uninit.rs:LL:CC}, usize>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
note: inside `relaxed`
  --> tests/fail/weak_memory/weak_uninit.rs:LL:CC
   |
LL |     let j2 = spawn(move || x.load(Ordering::Relaxed));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `main`
  --> tests/fail/weak_memory/weak_uninit.rs:LL:CC
   |
LL |         relaxed();
   |         ^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

